fixed numerous issues with styling on mobile

--- a/components/sections/header/Header.module.scss
+++ b/components/sections/header/Header.module.scss
@@ -4,11 +4,32 @@
 	background-color: var(--backgroundDark);
 	height: var(--headerHeight);
 
+	@include flex;
+}
+
+.floatingHeader {
+	width: 100%;
 	@include flex(row);
+	height: var(--headerHeight);
+
+	background-color: var(--backgroundDark);
+	@include border($color: var(--backgroundDark), $radius: 15px);
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+	// @include shadow;
 
 	@include desktop-up {
 		justify-content: flex-start;
+	}
+
+	@include desktop-up {
 		padding-left: 1rem;
+	}
+	// Sticky on mobile
+	@include mobile-only {
+		position: fixed;
+		top: 0;
+		z-index: 1;
 	}
 }
 
